@@ -39,7 +39,7 @@ extern "C" {
 
 //////////////////////////////////////////////////////////////////////////////
 
-static const char *const VERSION = "0.1.3";
+static const char *const VERSION = "0.1.4";
 static const char *const DESCRIPTION =
 trNOOP("A software and GPU emulated HD device");
 
